--- a/01_python.ipynb
+++ b/01_python.ipynb
@@ -155,6 +155,173 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. 딕셔너리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'HP': 200, 'make': 'BMW', 'color': 'white'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\"HP\" : 200, \"make\" : \"BMW\"}\n",
+    "\n",
+    "print(car['HP'])\n",
+    "\n",
+    "car['color'] = 'white'\n",
+    "\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. 조건문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영하입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = -10\n",
+    "\n",
+    "if temp < 0:  # 콜론\n",
+    "    print(\"영하입니다.\")  # 들여쓰기\n",
+    "else:\n",
+    "    print(\"영상입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. 반복문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in [1,2,3,4,5]:\n",
+    "    print(i, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. 함수\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sayHello():\n",
+    "    print(\"Hello!\")\n",
+    "    \n",
+    "sayHello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Lucy\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sayHello(name):\n",
+    "    print(\"Hello!\", name)\n",
+    "\n",
+    "sayHello(\"Lucy\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. 클래스"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello My name is Lucy\n",
+      "I'm 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def sayHello(self):\n",
+    "        print(\"Hello My name is\", self.name)\n",
+    "        print(\"I'm\", self.age)\n",
+    "        \n",
+    "p1 = Person(\"Lucy\", 21)  # 클래스 변수 정의\n",
+    "p1.sayHello()  # 클래스 내부 함수 접근(dot)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
