--- a/04_MLP.ipynb
+++ b/04_MLP.ipynb
@@ -350,6 +350,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1/(1+np.exp(-x))\n",
+    "\n",
+    "def sigmoid_deriv(x):\n",
+    "    return x*(1-x)\n",
+    "\n",
+    "inputs, hiddens, outputs = 2, 2, 1\n",
+    "lrate = 0.2\n",
+    "\n",
+    "# 훈련 샘플과 정답 \n",
+    "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]]) \n",
+    "T = np.array([[0], [1], [1], [0]])\n",
+    "\n",
+    "W1 = np.array([[0.1, 0.2],\n",
+    "               [0.3, 0.4]])\n",
+    "W2 = np.array([[0.5], \n",
+    "                [0.6]])\n",
+    "\n",
+    "B1 = np.array([0.1, 0.2])\n",
+    "B2 = np.array([0.3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]] [0] [[0.00742428]]\n",
+      "[[0 1]] [1] [[0.99197363]]\n",
+      "[[1 0]] [1] [[0.99197324]]\n",
+      "[[1 1]] [0] [[0.01000691]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def predict(x):\n",
+    "    Z1 = x @ W1 + B1\n",
+    "    a1 = sigmoid(Z1)\n",
+    "    Z2 = np.dot(a1, W2) + B2\n",
+    "    a2 = sigmoid(Z2)\n",
+    "    return x, a1, a2\n",
+    "\n",
+    "def fit():\n",
+    "    global W1, W2, B1, B2   \n",
+    "    # 10000번 반복\n",
+    "    for i in range(100000):\n",
+    "        for x,y in zip(X, T):\n",
+    "            x = np.reshape(x, (1, -1))\n",
+    "            y = np.reshape(y, (1, -1))\n",
+    "            \n",
+    "            l0, l1, l2 = predict(x)  # 순방향 패스 계산 출력값(out)\n",
+    "            \n",
+    "            l2_error = l2 - y # 오차 계산\n",
+    "            l2_delta = l2_error * sigmoid_deriv(l2)\n",
+    "            \n",
+    "            l1_error = np.dot(l2_delta, W2.T)  # 오차 계산\n",
+    "            l1_delta = l1_error* sigmoid_deriv(l1)\n",
+    "\n",
+    "            W2 -= lrate*(l1.T@l2_delta)  # out(l1) * l2_delta \n",
+    "            W1 -= lrate*(l0.T@l1_delta)  # out(l0) * l1_delta\n",
+    "            \n",
+    "            B2 -= lrate*np.sum(l2_delta)  # 바이어스 업데이트 \n",
+    "            B1 -= lrate*np.sum(l1_delta)\n",
+    "            \n",
+    "            \n",
+    "def test():\n",
+    "    for x, y in zip(X, T):\n",
+    "    # 하나의  샘플을  꺼내서  2차원  행렬로  만든다. layer0, layer1, layer2 = predict(x)\n",
+    "        x = np.reshape(x, (1, -1))\n",
+    "        l0, l1, l2 = predict(x)\n",
+    "        print(x, y, l2)\n",
+    "        \n",
+    "fit()\n",
+    "test()  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5991089945685536"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def MSE(target, y):\n",
+    "    return 0.5*np.sum((target-y)**2)\n",
+    "\n",
+    "\n",
+    "y_pred = predict(X)\n",
+    "MSE(T, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
