--- a/hw3/04.ipynb
+++ b/hw3/04.ipynb
@@ -15,7 +15,9 @@
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import tensorflow as tf\n",
+    "import numpy as np "
    ]
   },
   {
@@ -90,132 +92,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "model = tf.keras.Sequential()\n",
     "model.add(tf.keras.layers.Dense(512, input_shape=(None, 4), activation='relu'))\n",
     "model.add(tf.keras.layers.Dropout(0.2))\n",
     "model.add(tf.keras.layers.Dense(3, activation='softmax'))  # 0-3 클래스 예측 \n",
     "\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n"
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/40\n",
-      "4/4 [==============================] - 0s 3ms/step - loss: 0.3368 - accuracy: 0.8917\n",
-      "Epoch 2/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2947 - accuracy: 0.9583\n",
-      "Epoch 3/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2894 - accuracy: 0.9500\n",
-      "Epoch 4/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2892 - accuracy: 0.9417\n",
-      "Epoch 5/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2837 - accuracy: 0.9333\n",
-      "Epoch 6/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2669 - accuracy: 0.9417\n",
-      "Epoch 7/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2698 - accuracy: 0.9667\n",
-      "Epoch 8/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2543 - accuracy: 0.9583\n",
-      "Epoch 9/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2566 - accuracy: 0.9667\n",
-      "Epoch 10/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2384 - accuracy: 0.9583\n",
-      "Epoch 11/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2555 - accuracy: 0.9500\n",
-      "Epoch 12/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2148 - accuracy: 0.9667\n",
-      "Epoch 13/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2395 - accuracy: 0.9167\n",
-      "Epoch 14/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2232 - accuracy: 0.9583\n",
-      "Epoch 15/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2128 - accuracy: 0.9750\n",
-      "Epoch 16/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2070 - accuracy: 0.9667\n",
-      "Epoch 17/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2253 - accuracy: 0.9583\n",
-      "Epoch 18/40\n",
-      "4/4 [==============================] - 0s 3ms/step - loss: 0.2173 - accuracy: 0.9333\n",
-      "Epoch 19/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2036 - accuracy: 0.9583\n",
-      "Epoch 20/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2026 - accuracy: 0.9417\n",
-      "Epoch 21/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1977 - accuracy: 0.9500\n",
-      "Epoch 22/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.2045 - accuracy: 0.9583\n",
-      "Epoch 23/40\n",
-      "4/4 [==============================] - 0s 3ms/step - loss: 0.1686 - accuracy: 0.9917\n",
-      "Epoch 24/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1970 - accuracy: 0.9667\n",
-      "Epoch 25/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1614 - accuracy: 0.9833\n",
-      "Epoch 26/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1676 - accuracy: 0.9583\n",
-      "Epoch 27/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1679 - accuracy: 0.9667\n",
-      "Epoch 28/40\n",
-      "4/4 [==============================] - 0s 3ms/step - loss: 0.1691 - accuracy: 0.9500\n",
-      "Epoch 29/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1623 - accuracy: 0.9583\n",
-      "Epoch 30/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1584 - accuracy: 0.9667\n",
-      "Epoch 31/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1596 - accuracy: 0.9750\n",
-      "Epoch 32/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1693 - accuracy: 0.9583\n",
-      "Epoch 33/40\n",
-      "4/4 [==============================] - 0s 3ms/step - loss: 0.1537 - accuracy: 0.9583\n",
-      "Epoch 34/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1540 - accuracy: 0.9500\n",
-      "Epoch 35/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1432 - accuracy: 0.9667\n",
-      "Epoch 36/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1520 - accuracy: 0.9750\n",
-      "Epoch 37/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1408 - accuracy: 0.9750\n",
-      "Epoch 38/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1465 - accuracy: 0.9500\n",
-      "Epoch 39/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1424 - accuracy: 0.9583\n",
-      "Epoch 40/40\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.1453 - accuracy: 0.9583\n"
+      "Epoch 1/30\n",
+      "WARNING:tensorflow:Model was constructed with shape (None, None, 4) for input KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name='dense_input'), name='dense_input', description=\"created by layer 'dense_input'\"), but it was called on an input with incompatible shape (None, 4).\n",
+      "WARNING:tensorflow:Model was constructed with shape (None, None, 4) for input KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name='dense_input'), name='dense_input', description=\"created by layer 'dense_input'\"), but it was called on an input with incompatible shape (None, 4).\n",
+      "1/4 [======>.......................] - ETA: 2s - loss: 1.1854 - accuracy: 0.2812WARNING:tensorflow:Model was constructed with shape (None, None, 4) for input KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name='dense_input'), name='dense_input', description=\"created by layer 'dense_input'\"), but it was called on an input with incompatible shape (None, 4).\n",
+      "4/4 [==============================] - 1s 44ms/step - loss: 1.1224 - accuracy: 0.3250 - val_loss: 1.0092 - val_accuracy: 0.5000\n",
+      "Epoch 2/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.9881 - accuracy: 0.3833 - val_loss: 0.8954 - val_accuracy: 0.7000\n",
+      "Epoch 3/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.8992 - accuracy: 0.5750 - val_loss: 0.8029 - val_accuracy: 0.7000\n",
+      "Epoch 4/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.8181 - accuracy: 0.6917 - val_loss: 0.7463 - val_accuracy: 1.0000\n",
+      "Epoch 5/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.7495 - accuracy: 0.7417 - val_loss: 0.6794 - val_accuracy: 0.8333\n",
+      "Epoch 6/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.7118 - accuracy: 0.7000 - val_loss: 0.6258 - val_accuracy: 0.7333\n",
+      "Epoch 7/30\n",
+      "4/4 [==============================] - 0s 8ms/step - loss: 0.6621 - accuracy: 0.6917 - val_loss: 0.5934 - val_accuracy: 0.8667\n",
+      "Epoch 8/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.5792 - accuracy: 0.8417 - val_loss: 0.5659 - val_accuracy: 1.0000\n",
+      "Epoch 9/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.5803 - accuracy: 0.8167 - val_loss: 0.5309 - val_accuracy: 0.9000\n",
+      "Epoch 10/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.5404 - accuracy: 0.7917 - val_loss: 0.5004 - val_accuracy: 0.8000\n",
+      "Epoch 11/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.5073 - accuracy: 0.8417 - val_loss: 0.4779 - val_accuracy: 0.7667\n",
+      "Epoch 12/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.4882 - accuracy: 0.8083 - val_loss: 0.4601 - val_accuracy: 0.8333\n",
+      "Epoch 13/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.4732 - accuracy: 0.8500 - val_loss: 0.4598 - val_accuracy: 0.8667\n",
+      "Epoch 14/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.4379 - accuracy: 0.8833 - val_loss: 0.4301 - val_accuracy: 0.9333\n",
+      "Epoch 15/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.4345 - accuracy: 0.8500 - val_loss: 0.4138 - val_accuracy: 0.8667\n",
+      "Epoch 16/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.4632 - accuracy: 0.8083 - val_loss: 0.4065 - val_accuracy: 1.0000\n",
+      "Epoch 17/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.4079 - accuracy: 0.9417 - val_loss: 0.3890 - val_accuracy: 0.9000\n",
+      "Epoch 18/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.4124 - accuracy: 0.8583 - val_loss: 0.3779 - val_accuracy: 0.9000\n",
+      "Epoch 19/30\n",
+      "4/4 [==============================] - 0s 8ms/step - loss: 0.4017 - accuracy: 0.8500 - val_loss: 0.3694 - val_accuracy: 1.0000\n",
+      "Epoch 20/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3988 - accuracy: 0.8917 - val_loss: 0.3638 - val_accuracy: 1.0000\n",
+      "Epoch 21/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3763 - accuracy: 0.9083 - val_loss: 0.3529 - val_accuracy: 1.0000\n",
+      "Epoch 22/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3627 - accuracy: 0.8917 - val_loss: 0.3388 - val_accuracy: 0.9667\n",
+      "Epoch 23/30\n",
+      "4/4 [==============================] - 0s 8ms/step - loss: 0.3747 - accuracy: 0.9167 - val_loss: 0.3312 - val_accuracy: 1.0000\n",
+      "Epoch 24/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3471 - accuracy: 0.9333 - val_loss: 0.3218 - val_accuracy: 1.0000\n",
+      "Epoch 25/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3398 - accuracy: 0.9167 - val_loss: 0.3133 - val_accuracy: 1.0000\n",
+      "Epoch 26/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3182 - accuracy: 0.9417 - val_loss: 0.3039 - val_accuracy: 0.9667\n",
+      "Epoch 27/30\n",
+      "4/4 [==============================] - 0s 8ms/step - loss: 0.3311 - accuracy: 0.9000 - val_loss: 0.2974 - val_accuracy: 1.0000\n",
+      "Epoch 28/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3113 - accuracy: 0.9333 - val_loss: 0.2920 - val_accuracy: 1.0000\n",
+      "Epoch 29/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3099 - accuracy: 0.9167 - val_loss: 0.2833 - val_accuracy: 1.0000\n",
+      "Epoch 30/30\n",
+      "4/4 [==============================] - 0s 7ms/step - loss: 0.3050 - accuracy: 0.9333 - val_loss: 0.2745 - val_accuracy: 1.0000\n"
      ]
     }
    ],
    "source": [
-    "history = model.fit(X_train, y_train, epochs=40)"
+    "history = model.fit(X_train, y_train, epochs=30, validation_data=(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, None, 4) for input KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name='dense_7_input'), name='dense_7_input', description=\"created by layer 'dense_7_input'\"), but it was called on an input with incompatible shape (None, 4).\n",
-      "1/1 [==============================] - 0s 64ms/step - loss: 0.1324 - accuracy: 1.0000\n",
-      "(loss, acc) : [0.1323959082365036, 1.0]\n"
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.2745 - accuracy: 1.0000\n",
+      "(loss, acc) : [0.27445992827415466, 1.0]\n"
      ]
     }
    ],
@@ -225,37 +199,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, None, 4) for input KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name='dense_7_input'), name='dense_7_input', description=\"created by layer 'dense_7_input'\"), but it was called on an input with incompatible shape (None, 4).\n",
-      "1/1 [==============================] - 0s 25ms/step\n"
+      "WARNING:tensorflow:Model was constructed with shape (None, None, 4) for input KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name='dense_input'), name='dense_input', description=\"created by layer 'dense_input'\"), but it was called on an input with incompatible shape (None, 4).\n",
+      "1/1 [==============================] - 0s 48ms/step\n"
      ]
     }
    ],
    "source": [
-    "predictions = model.predict(X_test)\n"
+    "predictions = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = []\n",
-    "for i in range(len(predictions)):\n",
-    "    pred.append(np.argmax(predictions[i]))\n",
-    "    "
+    "pred_class = [np.argmax(y, axis=None, out=None) for y in predictions]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -269,58 +240,42 @@
        "       'virginica', 'virginica', 'setosa', 'setosa'], dtype='<U10')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iris.target_names[pred]\n"
+    "iris.target_names[pred_class]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iris.target_names[pred] == iris.target_names[y_test]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
+      "accuracy : 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = np.sum(iris.target_names[pred_class] == iris.target_names[y_test]) / y_test.shape[0]\n",
+    "print(f'accuracy : {acc}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        10\n",
@@ -335,14 +290,10 @@
     }
    ],
    "source": [
-    "pred = []\n",
-    "for i in range(len(X_test)):\n",
-    "    pred.append(np.argmax(predictions[i]))\n",
-    "    \n",
-    "score = accuracy_score(pred, y_test)\n",
     "\n",
-    "print(score)\n",
-    "print(classification_report(pred, y_test))\n"
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "print(classification_report(pred_class, y_test))\n"
    ]
   },
   {
