--- a/hw3/05.ipynb
+++ b/hw3/05.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 다중클래스 분류 프로그램\n",
+    "### 5. 와인의 품질 예측하기\n",
+    "-  다중클래스 분류 프로그램\n",
     "- 심층신경망 사용 "
    ]
   },
@@ -642,26 +643,6 @@
    ],
    "source": [
     "train_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 케라스 다중 클래스 분류 모델 생성 \n",
-    "model = tf.keras.Sequential()\n",
-    "model.add(tf.keras.layers.Dense(256, activation='relu', input_dim=X_train.shape[1])),\n",
-    "model.add(tf.keras.layers.Dropout(0.2)),\n",
-    "model.add(tf.keras.layers.Dense(128, activation='relu')),\n",
-    "model.add(tf.keras.layers.Dropout(0.2)),\n",
-    "model.add(tf.keras.layers.Dense(64, activation='relu')),\n",
-    "model.add(tf.keras.layers.Dropout(0.2)),\n",
-    "model.add(tf.keras.layers.Dense(32, activation='relu')),\n",
-    "model.add(tf.keras.layers.Dense(32, activation='relu')),\n",
-    "model.add(tf.keras.layers.Dropout(0.2)),\n",
-    "model.add(tf.keras.layers.Dense(7, activation='softmax'))  # 0-6 클래스로 분류 \n"
    ]
   },
   {
@@ -1677,6 +1658,20 @@
     }
    ],
    "source": [
+    "# 케라스 다중 클래스 분류 모델 생성 \n",
+    "model = tf.keras.Sequential()\n",
+    "model.add(tf.keras.layers.Dense(256, activation='relu', input_dim=X_train.shape[1])),\n",
+    "model.add(tf.keras.layers.Dropout(0.2)),\n",
+    "model.add(tf.keras.layers.Dense(128, activation='relu')),\n",
+    "model.add(tf.keras.layers.Dropout(0.2)),\n",
+    "model.add(tf.keras.layers.Dense(64, activation='relu')),\n",
+    "model.add(tf.keras.layers.Dropout(0.2)),\n",
+    "model.add(tf.keras.layers.Dense(32, activation='relu')),\n",
+    "model.add(tf.keras.layers.Dense(32, activation='relu')),\n",
+    "model.add(tf.keras.layers.Dropout(0.2)),\n",
+    "model.add(tf.keras.layers.Dense(7, activation='softmax'))  # 0-6 클래스로 분류 \n",
+    "\n",
+    "\n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "history = model.fit(X_train, train_Y, epochs=500, batch_size=100, validation_split=0.2, verbose=2)\n"
@@ -1756,6 +1751,8 @@
     "train_pred = model.predict(X_train)\n",
     "test_pred =model.predict(X_test)\n",
     "\n",
+    "\n",
+    "# 클래스 예측 결과 \n",
     "train_class = [np.argmax(y) for y in train_pred]\n",
     "test_class = [np.argmax(y) for y in test_pred]\n"
    ]
@@ -1780,10 +1777,10 @@
     }
    ],
    "source": [
-    "print(pd.DataFrame((train_class == y_train)).value_counts())\n",
+    "print(pd.DataFrame((train_class == y_train)).value_counts())  # train set에서 맞은 개수와 틀린 개수 \n",
     "\n",
     "print()\n",
-    "print(pd.DataFrame((test_class == y_test)).value_counts())\n"
+    "print(pd.DataFrame((test_class == y_test)).value_counts())  # test set에서 맞은 개수와 틀린 개수 \n"
    ]
   },
   {
@@ -1830,7 +1827,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7 ('main')",
    "language": "python",
    "name": "python3"
   },
@@ -1844,12 +1841,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d3503761bcfca8a35b206c120347a79b8f357a240799dbb2d56df951ee782c70"
+    "hash": "a13c1f174da018924908b1e8571e298da298e4abbf07441cf38032ea7ece811d"
    }
   }
  },
